--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,14 @@ main {
     width: 100%;
     max-width: 1200px;
     margin: 2rem 0;
+    justify-content: space-between;
+}
+
+/* ensure the flex container's children stretch to equal height */
+main > section {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
 
 /* adjust layout for smaller screens */
@@ -48,20 +56,21 @@ h1 {
     padding: 2rem;
     background-color: #ffffff;
     border-radius: 12px;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    border: 2px solid #dadada;
 }
 
 /* color picker section */
 .color-picker {
     display: flex;
-    gap: 1.5rem;
+    flex: 1;
     justify-content: center;
     align-items: center;
-    margin-bottom: 2rem;
-    padding: 1rem;
+    margin-bottom: 1.5rem;
+    gap: 1.5rem;
+    padding: 1.5rem;
     background-color: #ffffff;
     border-radius: 12px;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    border: 2px solid #dadada;
 }
 
 /* color picker label styling */
@@ -79,8 +88,7 @@ input[type="color"] {
     cursor: pointer;
     background-color: transparent;
     transition: background-color 0.2s ease-in-out;
-    border: none; 
-    outline: none;
+    border: 2px solid #dadada;
 }
 
 /* fill color picker circle with selected color */
@@ -106,6 +114,50 @@ input[type="color"]::-webkit-color-swatch {
     border-radius: 8px;
     cursor: pointer;
     margin-bottom: 1.5rem;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+}
+
+#swap-button:hover {
+    opacity: 0.8;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+}
+
+/* palette container styling */
+.palette-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: left;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    background-color: #ffffff;
+    border-radius: 12px;
+    border: 2px solid #dadada;
+
+}
+
+/* palette button styling */
+.palette-buttons {
+    display: flex;
+    gap: 0.5rem;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+}
+
+.palette-buttons button {
+    height: auto;
+    width: auto;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 0.5rem;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.palette-buttons button:hover {
+    opacity: 0.8;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
 }
 
 /* dropdown styling */
@@ -118,19 +170,19 @@ input[type="range"] {
     border-radius: 8px;
     background-color: #ffffff;
     transition: border-color 0.2s;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 /* section for contrast ratio display */
 #contrast-ratio {
     font-size: 1.2rem;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     margin-bottom: 1rem;
     text-align: center;
     padding: 1rem;
     background-color: #ffffff;
     border-radius: 8px;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    border: 2px solid #dadada;
 }
 
 #contrast-ratio .pass-fail {
@@ -186,22 +238,28 @@ input[type="range"]::-moz-range-thumb {
 
 /* custom text input styling */
 #customText {
-    margin-top: 20px;
+    width: 100%;
+    padding: 1rem;
+    font-size: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
 }
 
 /* live preview styling */
 #previewBox {
     padding: 2rem;
     font-size: 1.3rem;
+    flex: 1;
     text-align: center;
     color: #000000;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 12px;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
     transition: all 0.3s ease;
-    margin-top: 1rem;
     margin-bottom: 1rem;
+    border: 2px solid #dadada;
 }
 
 /* copy hex codes button styling */
@@ -218,6 +276,12 @@ input[type="range"]::-moz-range-thumb {
     border-radius: 8px;
     cursor: pointer;
     margin-top: 1rem;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+}
+
+#copy-button:hover {
+    opacity: 0.8;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
 }
 
 /* reset button styling */
@@ -234,16 +298,12 @@ input[type="range"]::-moz-range-thumb {
     border-radius: 8px;
     cursor: pointer;
     margin-top: 0.5rem;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
 }
 
-
-/* custom preview text input */
-#customText {
-    width: 100%;
-    padding: 1rem;
-    font-size: 1rem;
-    border: 1px solid #ddd;
-    border-radius: 8px;
+#reset-button:hover {
+    opacity: 0.8;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
 }
 
 /* media query for responsiveness */
@@ -261,5 +321,10 @@ input[type="range"]::-moz-range-thumb {
     .severity-container {
         flex-direction: column;
         align-items: flex-start;
+    }
+
+    #customText {
+        padding: 0.8rem;
+        font-size: 1rem;
     }
 }
